[tool.poetry]
name = "2016-numpy"
version = "0.1.0"
description = ""
authors = ["Nyctef <nyctef@nyctef.com>"]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "^3.10"
numpy = "^2.2.1"

[tool.poetry.group.dev.dependencies]
pytest = "^8.3.4"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
