[package]
name = "aoc-2017-rust"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
color-eyre = "0.6.2"
derive_more = "0.99.17"
itertools = "0.12.0"
lazy_static = "1.4.0"
md5 = "0.7.0"
regex = "1.10.2"
reqwest = { version = "0.11.23", default-features = false, features = [
  "default-tls",
  "cookies",
  "blocking",
] }
rustc-hash = "1.1.0"
serde_json = "1.0.108"

[profile.release]
debug = true

[dev-dependencies]
criterion = "0.3"
