[package]
name = "aoc-2019-rust"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
color-eyre = "0.6.2"
derive_more = "0.99.17"
itertools = "0.10.5"
nom = "7.1.1"
num-traits = "0.2.15"
regex = "1.7.0"
reqwest = { default-features = false, version = "0.11.13", features = [
    "default-tls",
    "cookies",
    "blocking",
] }

[profile.release]
overflow-checks = true
