[package]
name = "aoc-2023-rust"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
color-eyre = "0.6.2"
itertools = "0.12.0"
nom = "7.1.3"
nom-supreme = "0.8.0"
regex = "1.10.2"
reqwest = { version = "0.11.22", features = ["blocking", "cookies"] }
