[package]
name = "aoc-2023-rust"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
color-eyre = "0.6.2"
derive_more = "0.99.17"
factorio-blueprint = "0.3.0"
itertools = "0.12.0"
lazy_static = "1.4.0"
nom = "7.1.3"
nom-supreme = "0.8.0"
num = "0.4.1"
regex = "1.10.2"
reqwest = { version = "0.11.22", features = ["blocking", "cookies"] }
noisy_float = "0.1.15"
rand = "0.8.5"

[profile.release]
overflow-checks = true
