cabal-version:      3.0
name:               aoc2025
version:            0.1.0.0
synopsis:           Advent of Code 2025 solutions
author:             AoC Participant
maintainer:         example@example.com
build-type:         Simple
extra-doc-files:    README.md

common warnings
    ghc-options: -Wall

library
    import:           warnings
    exposed-modules:
        Day01
        InputFetcher
    build-depends:
        base >=4.18 && <5,
        text,
        containers,
        vector,
        split,
        http-conduit,
        bytestring,
        directory,
        filepath
    hs-source-dirs:   src
    default-language: Haskell2010

executable aoc2025
    import:           warnings
    main-is:          Main.hs
    build-depends:
        base >=4.18 && <5,
        aoc2025,
        time
    hs-source-dirs:   app
    default-language: Haskell2010

test-suite aoc2025-test
    import:           warnings
    default-language: Haskell2010
    type:             exitcode-stdio-1.0
    hs-source-dirs:   test
    main-is:          Main.hs
    build-depends:
        base >=4.18 && <5,
        aoc2025,
        tasty,
        tasty-hunit
