cabal-version:      3.0
name:               aoc2025
version:            0.1.0.0
synopsis:           Advent of Code 2025 solutions
author:             AoC Participant
maintainer:         example@example.com
build-type:         Simple
extra-doc-files:    README.md

common common-options
    ghc-options: -Wall
    default-language: Haskell2010
    default-extensions:
        OverloadedStrings
        MultilineStrings

library
    import:           common-options
    exposed-modules:
        Day01
        Day02
        Day03
        Day04
        Day05
        Day06
        Day07
        PointRC
        GridRC
        InputFetcher
    build-depends:
        base >=4.18 && <5,
        text,
        containers,
        unordered-containers,
        hashable,
        vector,
        split,
        http-conduit,
        bytestring,
        directory,
        filepath,
        parsec,
        regex-pcre
    hs-source-dirs:   src

executable aoc2025
    import:           common-options
    main-is:          Main.hs
    build-depends:
        base >=4.18 && <5,
        aoc2025,
        text,
        time,
        containers
    hs-source-dirs:   app

test-suite aoc2025-test
    import:           common-options
    type:             exitcode-stdio-1.0
    hs-source-dirs:   test
    main-is:          Main.hs
    -- TODO: is there a good way to avoid listing out all these files?
    other-modules:
        Day01Test
        Day02Test
        Day03Test
        Day04Test
        Day05Test
        Day06Test
        Day07Test
    build-depends:
        base >=4.18 && <5,
        aoc2025,
        text,
        tasty,
        tasty-hunit,
        tasty-discover
    build-tool-depends: tasty-discover:tasty-discover
